<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="?attr/colorOnPrimary"
   >

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/permissions"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/allow_permissions"
                android:textColor="#FF0000"
                android:textSize="20sp"
                android:visibility="gone"
                tools:ignore="MissingConstraints" />



            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/switch_location"
                android:textSize="20sp"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchCamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/switch_camera"
                android:textSize="20sp"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchStorage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/switch_storage"
                android:textSize="20sp"
                tools:ignore="MissingConstraints" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_alignParentEnd="true"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:text="@string/ok" />
            </RelativeLayout>


</LinearLayout>